--- a/每日一题/102.二叉树的层序遍历.md
+++ b/每日一题/102.二叉树的层序遍历.md
@@ -10,6 +10,9 @@
 >>  [15,7]
 >>]
 
+思路解析：
+考查二叉树的基本层序遍历方式，其核心是队列，本质是BFS。也可以可以用两个List来实现，从而区分不同的层。仅用Queue实现的方式是，记录当前queue的节点数量
+
 ```java
 /**
  * Definition for a binary tree node.
@@ -20,6 +23,29 @@
  *     TreeNode(int x) { val = x; }
  * }
  */
+
+class Solution {
+    public List<List<Integer>> levelOrder(TreeNode root) {
+        List<List<Integer>> ret = new ArrayList();
+        if(root==null) return ret;
+        Queue<TreeNode> queue = new LinkedList();
+        queue.offer(root);
+        while(!queue.isEmpty()){
+            int count = queue.size();
+            List<Integer> temp = new ArrayList();
+            while(count>0){
+                TreeNode t = queue.poll();
+                temp.add(t.val);
+                if(t.left!=null) queue.offer(t.left);
+                if(t.right!=null) queue.offer(t.right);
+                count--;
+            }
+            ret.add(temp);
+        }
+        return ret;
+    }
+}
+
 class Solution {
     public List<List<Integer>> levelOrder(TreeNode root) {
         List<List<Integer>> ret = new ArrayList();
@@ -40,4 +66,5 @@ class Solution {
         return ret;
     }
 }
+
 ```
